@@ -49,8 +49,12 @@ exprt aval_bval(const verilog_logical_inequality_exprt &);
 exprt aval_bval(const not_exprt &);
 /// lowering for ~
 exprt aval_bval(const bitnot_exprt &);
-/// lowering for &, |, ^, ^~
-exprt aval_bval_bitwise(const multi_ary_exprt &);
+/// lowering for &
+exprt aval_bval_bitand(const bitand_exprt &);
+/// lowering for |
+exprt aval_bval_bitor(const bitor_exprt &);
+/// lowering for ^, ^~
+exprt aval_bval_xor_xnor(const multi_ary_exprt &);
 /// lowering for reduction operators
 exprt aval_bval_reduction(const unary_exprt &);
 /// lowering for replication
